--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ELERINMOSA INSTITUTE OF TECHNOLOGY</title>
+    <link
+  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+
+
     <link rel="stylesheet" href="./css/style.css" />
+
     <script
       src="https://kit.fontawesome.com/803bea61fc.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+  </script>
   </head>
   <body>
     <nav>
@@ -275,6 +280,110 @@
 
     <!-- ends here -->
 
-    <script src="./script.js"></script>
+    <!-- review  -->
+
+     <section class="review-cont mySwiper">
+        <h2>Students Testimonials</h2>
+        <div class="swiper-wrapper">
+
+            <article class="review swiper-slide  ">
+   
+                 <div class="student-img">
+                    <img src="./img/admin.jpg" alt="">
+                </div>
+                <div class="review-info">
+
+                     <h5>Sulaiman kabir</h5>
+                    <small>Studnet</small>
+                </div>
+                <div class="review-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus provident facilis nulla dolores tenetur nostrum tempora numquam debitis sit obcaecati dolorum aspernatur, dignissimos ea natus.</p>
+                </div>
+            </article>
+
+            <article class="review swiper-slide ">
+  
+                 <div class="student-img">
+                    <img src="./img/student1.jpg" alt="">
+                </div>
+                <div class="review-info">
+
+                     <h5>Alao hammed</h5>
+                    <small>Studnet</small>
+                </div>
+                <div class="review-content
+                ">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus provident facilis nulla dolores tenetur nostrum tempora numquam debitis sit obcaecati dolorum aspernatur, dignissimos ea natus.</p>
+                </div>
+            </article>
+            <article class="review swiper-slide ">
+   
+                 <div class="student-img">
+                    <img src="./img/stu2.jpg" alt="">
+                </div>
+                <div class="review-info">
+
+                     <h5>Alao yinka</h5>
+                    <small>Studnet</small>
+                </div>
+                <div class="review-content
+                ">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus provident facilis nulla dolores tenetur nostrum tempora numquam debitis sit obcaecati dolorum aspernatur, dignissimos ea natus.</p>
+                </div>
+            </article>
+            <article class="review swiper-slide ">
+
+                 <div class="student-img">
+                    <img src="./img/stu3.jpg" alt="">
+                </div>
+                <div class="review-info">
+
+                     <h5>Sulaiman kabir</h5>
+                    <small>Studnet</small>
+                </div>
+                <div class="review-content
+                ">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus provident facilis nulla dolores tenetur nostrum tempora numquam debitis sit obcaecati dolorum aspernatur, dignissimos ea natus.</p>
+                </div>
+            </article>
+            <article class="review swiper-slide ">
+  
+                 <div class="student-img">
+                    <img src="./img/stu4.jpg" alt="">
+                </div>
+                <div class="review-info">
+
+                     <h5>Sulaiman kabir</h5>
+                    <small>Studnet</small>
+                </div>
+                <div class="review-content
+                ">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus provident facilis nulla dolores tenetur nostrum tempora numquam debitis sit obcaecati dolorum aspernatur, dignissimos ea natus.</p>
+                </div>
+            </article>
+            <article class="review swiper-slide ">
+ 
+                 <div class="student-img">
+                    <img src="./img/avatar5.jpg" alt="">
+                </div>
+                <div class="review-info">
+
+                     <h5>Sulaiman kabir</h5>
+                    <small>Studnet</small>
+                </div>
+                <div class="review-content ">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus provident facilis nulla dolores tenetur nostrum tempora numquam debitis sit obcaecati dolorum aspernatur, dignissimos ea natus.</p>
+                </div>
+            </article>
+        </div>
+
+    </section>
+
+    <!-- review ends he
+      re -->
+    
+      <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+      <script src="./script.js"></script>
+  
   </body>
 </html>
