--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous">
   </script>
   </head>
-  <body>
+  
     <nav>
       <div class="container nav_container">
         <a href="index.html"><h4>EIT</h4></a>
@@ -323,7 +323,7 @@
                 </div>
                 <div class="review-info">
 
-                     <h5>Alao yinka</h5>
+                     <h5>Sister funmi</h5>
                     <small>Studnet</small>
                 </div>
                 <div class="review-content
@@ -338,7 +338,7 @@
                 </div>
                 <div class="review-info">
 
-                     <h5>Sulaiman kabir</h5>
+                     <h5>Acountant</h5>
                     <small>Studnet</small>
                 </div>
                 <div class="review-content
@@ -353,7 +353,7 @@
                 </div>
                 <div class="review-info">
 
-                     <h5>Sulaiman kabir</h5>
+                     <h5>Halimot Elerinmosa</h5>
                     <small>Studnet</small>
                 </div>
                 <div class="review-content
@@ -381,6 +381,61 @@
 
     <!-- review ends he
       re -->
+
+
+      <!-- footer section -->
+<footer class="footer">
+
+  <div class="container footer_cont">
+
+    <div class="footer1">
+      <a href="index.html" class="footer-logo"><h4>EIT</h4></a>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, et animi. Harum, omnis.</p>
+    </div>
+    <div class="footer2">
+      <h4>permalinks</h4>
+      <ul class="permalinks">
+        <li><a href="index.html">home</a></li>
+         <li><a href="about.html">about</a></li>
+          <li><a href="courses.html">courses</a></li>
+           <li><a href="contanct.html">contact</a></li>
+      </ul>
+    </div>
+
+      <div class="footer3">
+      <h4>primary</h4>
+      <ul class="privacy">
+        <li><a href="#">privacy and policy</a></li>
+         <li><a href="#">terms and conditon</a></li>
+          <li><a href="#">refund policy</a></li>
+           <li><a href="#">pay as you learn policy</a></li>
+      </ul>
+    </div>
+
+      <div class="footer4">
+      <h4>contact us</h4>
+
+      <div>
+        <p>+2349067762136</p>
+        <p>yinkson51@gmail.com</p>
+      </div>
+
+      <ul class="socials-media">
+        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href=""><i class="fa-brands fa-instagram"></i></i></a></li>
+        <li><a href=""><i class="fa-brands fa-x-twitter"></i></a></li>
+        <li><a href=""><i class="fa-brands fa-linkedin"></i></i></a></li>
+      </ul>
+    </div>
+
+   
+  </div>
+  <div class="footer-copyright">
+    <small>Copyright &copy; WHYKCODE</small>
+  </div>
+</footer>
+
+      <!-- footer section ends here -->
     
       <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
       <script src="./script.js"></script>
