--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ELERINMOSA INSTITUTE OF TECHNOLOGY</title>
+    <title>WHYKCODE</title>
     <link
   rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
 
@@ -18,7 +18,7 @@
   
     <nav>
       <div class="container nav_container">
-        <a href="index.html"><h4>EIT</h4></a>
+        <a href="index.html"><h4>WHYKCODE</h4></a>
         <ul class="nav-menu">
           <li><a href="index.html">home</a></li>
           <li><a href="about.html">about</a></li>
@@ -389,7 +389,7 @@
   <div class="container footer_cont">
 
     <div class="footer1">
-      <a href="index.html" class="footer-logo"><h4>EIT</h4></a>
+      <a href="index.html" class="footer-logo"><h4>WHYKCODE</h4></a>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, et animi. Harum, omnis.</p>
     </div>
     <div class="footer2">
